--- a/styles.css
+++ b/styles.css
@@ -51,25 +51,29 @@ nav li {
 
 .search-container {
     display: inline;
-    justify-content: flex-end;
 }
 
 .about_us {
     position: relative;
-    width: auto;
+    width: 80%;
     text-align: left;
 }
 
 .about_us img {
     width: 300px;
     height: 300px;
+    float: left;
+}
+
+.about_us div{
+    position: relative;
 }
 .our_products {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 65px;
     row-gap: 70px;
-    position: fixed;
+    position: relative;
 }
 
 .our_products a {
